Changed directory name authorization_code to app Signed-off-by: binsmyth <binsmyth@gmail.com>

--- a/web-api-auth-examples/app/public/index.html
+++ b/web-api-auth-examples/app/public/index.html
@@ -164,7 +164,6 @@
          }            
       }
     </script>
-    <button onClick = "fetchLocalData();">Click Here</button>
-    <a href="/play?id=10">Play</a>
+    <button onClick = "fetchLocalData();">View Playlists</button>
   </body>
 </html>
