moving on to implementing react in the UI section Signed-off-by: binsmyth <binsmyth@gmail.com>

--- a/web-api-auth-examples/app/public/index.html
+++ b/web-api-auth-examples/app/public/index.html
@@ -30,6 +30,8 @@
     </div>
     <div id="oauth">
     </div>
+    <div id="app">
+    </div>
 
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script>
@@ -165,5 +167,6 @@
       }
     </script>
     <button onClick = "fetchLocalData();">View Playlists</button>
+    <script src="react/bundle.js"></script>
   </body>
 </html>
