Audioplayer for modals, playlist styling, playlistcomponent ajax request to node server, SearchBar components
Signed-off-by: binsmyth <binsmyth@gmail.com>

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,7 +7,11 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-‌​awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./lib/styles.css">
+    <link rel="stylesheet" href="./lib/audioplayer.css">
+    <link rel="stylesheet" href="./lib/styles.css">
+    <link rel="stylesheet" href="./lib/playlist.css">
 
     <style type="text/css">
       #login, #loggedin {
