--- a/app/public/index.html
+++ b/app/public/index.html
@@ -38,8 +38,6 @@
         <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
       </div>
     </div>
-    <div id="oauth">
-    </div>
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-sm-6 col-xs-12" id="app">
@@ -56,7 +54,7 @@
          * Obtains parameters from the hash of the URL
          * @return Object
          */
-        function getHashParams() {
+        function getHashParams(){
           var hashParams = {};
           var e, r = /([^&;=]+)=?([^&;]*)/g,
               q = window.location.hash.substring(1);
@@ -66,14 +64,16 @@
           return hashParams;
         }
 
-
-        var oauthPlaceholder = document.getElementById('oauth');
-
         var params = getHashParams();
 
         var access_token = params.access_token,
             refresh_token = params.refresh_token,
             error = params.error;
+
+        fetch("/call?token="+ access_token)
+          .then(function(response){
+            console.log(response);
+          })
 
         var ajaxCall = function(url,s){
           var apiObject = $.ajax({
