--- a/app/public/index.html
+++ b/app/public/index.html
@@ -70,10 +70,10 @@
             refresh_token = params.refresh_token,
             error = params.error;
 
-        fetch("/call?token="+ access_token)
-          .then(function(response){
-            console.log(response);
-          })
+        // fetch("/call?token="+ access_token)
+        //   .then(function(response){
+        //     console.log(response);
+        //   })
 
         var ajaxCall = function(url,s){
           var apiObject = $.ajax({
