--- a/app/public/index.html
+++ b/app/public/index.html
@@ -47,7 +47,7 @@
       
     </div>
 
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="./lib/jquery-1.10.1.min.js"></script>
     <script>
       (function() {
         /**
